# web-excel-agent

./: .gitignore  COMPONENTS_USAGE.md  EXPORT_GUIDE.md  HOW_TO_TEST.md  MIGRATION_GUIDE.md  PROJECT_CONTEXT.md  PUSH_TO_GITHUB.md  QUICK_PUSH_GUIDE.md  QUICK_TEST.md  README.md  README_FIRST.md  STARTUP_GUIDE.md  TESTING_GUIDE.md  TEST_URLS.md  push_to_github.sh  start.sh
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: chart.py  chat.py  excel.py  scraper.py
backend/app/models/: excel.py
backend/app/services/: agent_service.py  chart_service.py  excel_service.py  scraper_service.py
backend/mcp_tools/: __init__.py  chart_tools.py  excel_tools.py  scraper_tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/ChartBuilder/: index.jsx
frontend/src/components/ChatInterface/: index.jsx
frontend/src/components/Spreadsheet/: index.jsx
frontend/src/services/: api.js
skills/: chart_builder.yaml  data_scraper.yaml  excel_agent.yaml  skill_generator.yaml
