[project]
name = "web-excel-backend"
version = "0.1.0"
description = "Web Excel Agent Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.4",
    "matplotlib>=3.10.0",
    "plotly>=5.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
